Closed
Bug 252525
Opened 21 years ago
Closed 21 years ago
Support transparent gtk2 xul windows
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8alpha3
People
(Reporter: Biesinger, Assigned: Biesinger)
Details
Attachments
(1 file)
|
10.43 KB,
patch
|
blizzard
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
I have a patch taht works. simple port of roc's gtk1 work from bug 113232
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #153939 -
Flags: review?(blizzard)
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8alpha3
Updated•21 years ago
|
Attachment #153939 -
Flags: review?(blizzard) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #153939 -
Flags: superreview?(roc)
Comment on attachment 153939 [details] [diff] [review]
patch
You need a dummy definition of nsWindow::ApplyTransparencyBitmap() in #ifndef
MOZ_XUL.
With that, sr=roc
Attachment #153939 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Comment 3•21 years ago
|
||
checked in, with that dummy definition.
Checking in widget/src/gtk2/nsWindow.cpp;
/cvsroot/mozilla/widget/src/gtk2/nsWindow.cpp,v <-- nsWindow.cpp
new revision: 1.114; previous revision: 1.113
done
Checking in widget/src/gtk2/nsWindow.h;
/cvsroot/mozilla/widget/src/gtk2/nsWindow.h,v <-- nsWindow.h
new revision: 1.47; previous revision: 1.46
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 4•21 years ago
|
||
This fix seems to have broken gtkmozembed. I get a segfault when running
TestGtkEmbed (or galeon) against a build from today's trunk. I can't get a good
backtrace however.
To repro the bug, run TestGtkEmbed and browse to any site.
I have confirmed that if I back it out, things work again.
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•