Bug 252525 Support transparent gtk2 xul windows r=blizzard sr=roc